--- a/IA-java/src/com/company/GUI_FX/View.fxml
+++ b/IA-java/src/com/company/GUI_FX/View.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.embed.swing.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
@@ -10,10 +11,11 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import com.company.GUI_swing.*?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller">
+<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.GUI_FX.Controller">
    <children>
-      <BorderPane layoutY="6.0" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #;" AnchorPane.rightAnchor="0.0">
+      <BorderPane layoutY="6.0" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #ffffff;" AnchorPane.rightAnchor="0.0">
          <bottom>
             <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="41.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER" />
          </bottom>
@@ -168,7 +170,7 @@
                      <children>
                         <ImageView fitHeight="67.0" fitWidth="223.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../Desktop/Screen%20Shot%202020-03-19%20at%2001.39.47.png" />
+                              <Image url="@../../../../img/million.png" />
                            </image>
                         </ImageView>
                      </children>
@@ -202,14 +204,20 @@
          <center>
             <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="781.0">
+                <AnchorPane fx:id="scrollPane" minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="781.0">
                      <children>
-                        <ImageView fitHeight="91.0" fitWidth="341.0" layoutX="47.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="currentLogo" fitHeight="91.0" fitWidth="341.0" layoutX="47.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../Desktop/Screen%20Shot%202020-03-20%20at%2012.23.33.png" />
+                              <Image url="@../../../../img/lotto.png" />
                            </image>
                         </ImageView>
-                        <Label layoutX="308.0" layoutY="55.0" text="Prediction according to Strategy 1" textFill="#e8b306">
+
+                        <Label fx:id="currentGameLabel" layoutX="365.0" layoutY="108.0" text="Lotto Game : Last drawing 12 mars 2020" textFill="#909090">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="currentStrategyLabel" layoutX="308.0" layoutY="55.0" text="Prediction according to Strategy 1" textFill="#e8b306">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -222,11 +230,7 @@
                               <TableColumn prefWidth="75.0" text="C2" />
                           </columns>
                         </TableView>
-                        <Label layoutX="365.0" layoutY="108.0" text="Lotto Game : Last drawing 12 mars 2020" textFill="#909090">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
+                        <SwingNode fx:id="currentTable" />
                      </children>
                   </AnchorPane>
               </content>
